--- a/src/main/resources/templates/member/profile.html
+++ b/src/main/resources/templates/member/profile.html
@@ -24,14 +24,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html" th:href="@{member/index}">Tickets</a>
+            <a class="navbar-brand" href="index.html" th:href="@{index}">Tickets</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="../site/index.html" th:href="@{member/site}">Site</a></li>
-                <li><a href="../member/statistics.html" th:href="@{statistics}">Statistics<span
+                <li><a href="redirect:/site/index.html" th:href="@{/site/index}">Site</a></li>
+                <li><a href="index.html" th:href="@{index}">Records</a></li>
+                <li><a href="statistics.html" th:href="@{statistics}">Statistics<span
                         class="sr-only">(current)</span></a></li>
                 <li class="active"><a href="../member/profile.html" th:href="@{profile}">Profile</a></li>
 
@@ -58,16 +59,16 @@
                 <th>Message</th>
             </tr>
             <tr>
-                <td>id</td>
-                <td th:text="${member.id}">0000001</td>
+                <td>User ID</td>
+                <td th:text="${member.userID}">0000001</td>
             </tr>
             <tr>
-                <td>mail</td>
-                <td th:text="${member.mail}">gakki@qq.com</td>
+                <td>Email</td>
+                <td th:text="${member.email}">gakki@qq.com</td>
             </tr>
             <tr>
-                <td>name</td>
-                <td th:text="${member.name}">Gakki</td>
+                <td>Name</td>
+                <td th:text="${member.userName}">Gakki</td>
             </tr>
             <!--<tr>-->
                 <!--<td>status</td>-->
@@ -75,7 +76,7 @@
             <!--</tr>-->
             <tr>
                 <td>Balance</td>
-                <td th:text="${member.deposit}">0</td>
+                <td th:text="${member.balance}">9999</td>
             </tr>
             <!--<tr>-->
                 <!--<td>Deposit</td>-->
@@ -86,8 +87,9 @@
                 <!--<td th:text="${member.remainDays}">0</td>-->
             <!--</tr>-->
             <tr>
-                <td>Credit</td>
-                <td th:text="${member.points}">0</td>
+                <!--<td>Member Level</td>-->
+                <td>Level</td>
+                <td th:text="'level ' +  ${member.level}">3</td>
             </tr>
             <!--<tr>-->
                 <!--<td>Points</td>-->
@@ -98,18 +100,22 @@
                 <!--<td th:text="${member.registDate}">2011-2-13</td>-->
             <!--</tr>-->
             <tr>
-                <td>Credit Card</td>
-                <td th:text="${member.creditCard}">None</td>
+            <!--<td>Accumulate Consumption</td>-->
+            <td>Consumption</td>
+            <td th:text="${member.consumption}">3500.00</td>
+             </tr>
+
+            <tr>
+                <td>Credit</td>
+                <td th:text="${member.credit}">350</td>
             </tr>
             <tr>
-                <!--<td>Accumulate Consumption</td>-->
-                <td>Consumption</td>
-                <td th:text="${member.accumulate}">0</td>
+                <td>External Account ID</td>
+                <td th:text="${member.accountID}">0510001</td>
             </tr>
             <tr>
-                <!--<td>Member Level</td>-->
-                <td>Level</td>
-                <td th:text="'level ' +  ${member.memberLevel}">0</td>
+                <td>Exterbal Balance</td>
+                <td th:text="${member.accountBalance}">7888</td>
             </tr>
             <!--<tr>-->
                 <!--<td>Discount</td>-->
@@ -152,17 +158,17 @@
                             <input type="text" class="form-control" name="name" id="nameM" placeholder="Your Name"/>
                         </div>
                     </div>
+                    <!--<div class="form-group">-->
+                        <!--<label for="mailM" class="col-sm-2 control-label">Mail</label>-->
+                        <!--<div class="col-sm-10">-->
+                            <!--<input type="email" class="form-control" name="mail" id="mailM" placeholder="E-mail"/>-->
+                        <!--</div>-->
+                    <!--</div>-->
                     <div class="form-group">
-                        <label for="mailM" class="col-sm-2 control-label">Mail</label>
-                        <div class="col-sm-10">
-                            <input type="email" class="form-control" name="mail" id="mailM" placeholder="E-mail"/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="creditCardM" class="col-sm-2 control-label">Credit Card</label>
+                        <label for="creditCardM" class="col-sm-2 control-label">External Account</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" name="creditCard" id="creditCardM"
-                                   placeholder="Your Credit Card"/>
+                                   placeholder="Your Exernal Account"/>
                         </div>
                     </div>
                 </div>
@@ -197,7 +203,7 @@
                         <label for="nameM" class="col-sm-2 control-label">Your points</label>
                         <div class="col-sm-10">
                             <input type="number" class="form-control"
-                                   th:placeholder="${member.points}" readonly="readonly"/>
+                                   th:placeholder="${member.accountID}" readonly="readonly"/>
                         </div>
                     </div>
                     <div class="form-group">
@@ -236,10 +242,10 @@
             <form class="form-horizontal" action="profile.html" th:action="@{/member/edit}" method="post">
                 <div class="modal-body">
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Credit Card</label>
+                        <label class="col-sm-2 control-label">External Account</label>
                         <div class="col-sm-10">
                             <input type="number" class="form-control"
-                                   th:placeholder="${member.creditCard}" readonly="readonly"/>
+                                   th:placeholder="${member.accountID}" readonly="readonly"/>
                         </div>
                     </div>
                     <div class="form-group">
