--- a/src/main/resources/templates/member/index.html
+++ b/src/main/resources/templates/member/index.html
@@ -17,7 +17,9 @@
           crossorigin="anonymous">
 
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../static/css/hotel.css" th:href="@{/css/hotel.css}"/>
     <title>Member Statistics</title>
 </head>
@@ -35,7 +37,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html" th:href="@{index}">Tickets</a>
+            <a class="navbar-brand" href="index.html" th:href="@{member/index}">Tickets</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -93,7 +95,7 @@
                         <!--model.attribute : ticket_records-->
                         <!--<tr th:each="reserveMes : ${statistics.reservedVOS}">-->
 
-                        <tr th:each="one : ${ticket_records}">
+                        <tr th:each="one : ${ticketrecords}">
                             <td th:text="${#numbers.formatInteger(one.recordID,7)}">000001</td>
                             <td th:text="${#numbers.formatInteger(one.userID,7)}">000001</td>
                             <td th:text="${#numbers.formatInteger(one.siteID,7)}">000001</td>
@@ -101,7 +103,7 @@
                             <td th:text="${one.seatType}">A</td>
                             <td th:text="${one.seatNumber}">A03</td>
                             <td th:text="${one.price}">150.0</td>
-                            <td th:text="${#dates.format(new java.util.Date(one.createTime),'dd/MM/yyyy')}">
+                            <td th:text="${one.createTime}">
                                 2018-3-19 13:48:28
                             </td>
                             <td th:text="${one.isValid}">True</td>
