--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -3,8 +3,27 @@
 <head>
     <meta charset="UTF-8"/>
     <!--<meta name="viewport" content="width=device-width, initial-scale=1"/>-->
-    <link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" href="../../static/css/bootstrap-theme.min.css" th:href="@{/css/bootstrap-theme.min.css}"/>
+
+    <!--<link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>-->
+    <!--<link rel="stylesheet" href="../../static/css/bootstrap-theme.min.css" th:href="@{/css/bootstrap-theme.min.css}"/>-->
+
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+
+    <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+          crossorigin="anonymous">
+
+    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+
+
+
     <link rel="stylesheet" href="../../static/css/hotel.css" th:href="@{/css/hotel.css}"/>
     <link rel="stylesheet" href="../../static/css/other.css" th:href="@{/css/other.css}"/>
     <title>Member Index</title>
@@ -23,23 +42,23 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html" th:href="@{index}">Tickets</a>
+            <a class="navbar-brand" href="../member/index.html" th:href="@{member/index}">Tickets</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <!--标签栏-->
             <ul class="nav navbar-nav">
-                <li class="active"><a href="../site/index.html" th:href="@{member/site}">Site<span
+                <li class="active"><a href="../site/index.html" th:href="@{/member/site}">Site<span
                         class="sr-only">(current)</span></a></li>
-                <li><a href="../member/statistics.html" th:href="@{member/statistics}">Statistics</a></li>
-                <li><a href="../member/profile.html" th:href="@{member/profile}">Profile</a></li>
+                <li><a href="../member/statistics.html" th:href="@{/member/statistics}">Statistics</a></li>
+                <li><a href="../member/profile.html" th:href="@{/member/profile}">Profile</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, gakki <span class="caret"></span></a>
+                       aria-expanded="false">Welcome, Gakki <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="../user/index.html" th:href="@{../logout}">Sign out</a></li>
                         <li><a href="../user/register.html" th:href="@{../register}">Register</a></li>
@@ -66,28 +85,33 @@
             <div class="item active my-carousel-image">
 
                 <!--<img src="../../static/img/hotel/hotel1.JPG" th:src="${hotels[0].picUrl}" alt="Hotel One"/>-->
-                <div class="carousel-cover" style="background-image:url('/static/img/hotel/bigHotel1.jpg')"></div>
+                <div class="carousel-cover" style="background-image:url('/img/hotel/bigHotel1.jpg')"></div>
+
                 <div class="carousel-caption">
                     <h2>
-                        <a href="detail.html" th:href="@{/member/detail(hotelId=${hotels[0].id})}"
-                           th:text="${hotels[0].name}"></a>
-                    </h2></div>
+                        <a href="plans.html" th:href="@{plans(siteID=${sites[0].siteID})}"
+                           th:text="${sites[0].siteName}"></a>
+                    </h2>
+                </div>
             </div>
+
             <div class="item my-carousel-image">
-                <div class="carousel-cover" style="background-image:url('static/img/hotel/bigHotel2.jpg')"></div>
+                <div class="carousel-cover" style="background-image:url('/img/hotel/bigHotel2.jpg')"></div>
                 <!--<img src="../../static/img/hotel/hotel2.jpeg" th:src="${hotels[1].picUrl}" alt="Hotel 2"/>-->
                 <div class="carousel-caption">
-                    <h2><a href="detail.html" th:href="@{/member/detail(hotelId=${hotels[1].id})}"
-                           th:text="${hotels[1].name}"></a>
-                    </h2></div>
+                    <h2><a href="plans.html" th:href="@{plans(siteID=${sites[1].siteID})}"
+                           th:text="${sites[1].siteName}"></a>
+                    </h2>
+                </div>
             </div>
+
             <div class="item my-carousel-image">
-                <!--<a href="detail.html" th:href="@{/member/detail(hotelId=${hotels[2].id})}"></a>-->
-                <div class="carousel-cover" style="background-image:url('static/img/hotel/bigHotel3.jpg')"></div>
+                <div class="carousel-cover" style="background-image:url('/img/hotel/bigHotel3.jpg')"></div>
                 <!--<img src="../../static/img/hotel/hotel3.jpg" style="background-image:url('../../static/img/hotel/hotel3.jpeg')" th:src="${hotels[2].picUrl}" alt="Hotel 3"/>-->
                 <div class="carousel-caption">
-                    <h2><a href="detail.html" th:href="@{/member/detail(hotelId=${hotels[2].id})}"
-                           th:text="${hotels[2].name}"></a></h2>
+                    <h2><a href="plans.html" th:href="@{plans(siteID=${sites[2].siteID})}"
+                           th:text="${sites[2].siteName}"></a>
+                    </h2>
                 </div>
             </div>
         </div>
@@ -105,19 +129,15 @@
 
     <!--底部-->
     <div class="row">
-        <div th:each="hotel : ${hotels}" class="col-sm-6 col-md-4">
+        <div th:each="site : ${sites}" class="col-sm-6 col-md-4">
             <div class="thumbnail">
-                <!--<img src="../../static/img/hotel/hotel1.JPG" alt="hotel pic" th:src="${hotel.picUrl}"/>-->
-                <div class="cover" th:style="'background-image: url(' + ${hotel.picUrl} + ')'"></div>
+                <img src="../../static/img/hotel/hotel1.JPG" alt="hotel pic" th:src="${site.picUrl}"/>
                 <div class="caption">
-                    <h3 th:text="${hotel.name}">Shanghai Hotel</h3>
-                    <p th:text="${hotel.description}">This is a very good hotel with wifi and hot
-                        water. The average
-                        reputation exceed 4 of 5 points! Why not have a try?</p>
+                    <h3 th:text="${site.siteName}">Rogers Site</h3>
+                    <p th:text="${site.address}"> Located in Canada </p>
                     <div>
-
                         <!--<a data-target="#bookModal" href="#" class="btn btn-primary" role="button" "></a>-->
-                        <a href="detail.html" th:href="@{/member/detail(hotelId=${hotel.id})}" class="btn btn-info"
+                        <a href="plans.html" th:href="@{plans(siteID=${site.siteID})}" class="btn btn-info"
                            role="button">More</a></div>
                 </div>
             </div>
@@ -128,18 +148,18 @@
     <nav aria-label="Page navigation" class="col-md-offset-4 col-md-4">
         <ul class="pagination pagination-lg">
             <li>
-                <a id="previous" href="#" th:disabled="${current == 0} ? 'disabled' : 'not'"
-                   th:href="@{/member/index(page=${current} - 1)}" aria-label="Previous">
+                <a id="previous" href="#" th:disabled="${current}<0 ? 'disabled' : 'not'"
+                   th:href="@{/site/index(page=${current} - 1)}" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
-            <li><a href="#" th:href="@{/member/index(page=${current})}" th:text="${current} + 1">1</a></li>
-            <li><a href="#" th:href="@{/member/index(page=${current} + 1)}" th:text="${current} + 2">2</a></li>
-            <li><a href="#" th:href="@{/member/index(page=${current} + 2)}" th:text="${current} + 3">3</a></li>
-            <li><a href="#" th:href="@{/member/index(page=${current} + 3)}" th:text="${current} + 4">4</a></li>
-            <li><a href="#" th:href="@{/member/index(page=${current} + 4)}" th:text="${current} + 5">5</a></li>
+            <li><a href="#" th:href="@{/site/index(page=${current})}" th:text="${current} + 1">1</a></li>
+            <li><a href="#" th:href="@{/site/index(page=${current} + 1)}" th:text="${current} + 2">2</a></li>
+            <li><a href="#" th:href="@{/site/index(page=${current} + 2)}" th:text="${current} + 3">3</a></li>
+            <li><a href="#" th:href="@{/site/index(page=${current} + 3)}" th:text="${current} + 4">4</a></li>
+            <li><a href="#" th:href="@{/site/index(page=${current} + 4)}" th:text="${current} + 5">5</a></li>
             <li>
-                <a href="#" th:href="@{/member/index(page=${current} + 1)}" aria-label="Next">
+                <a href="#" th:href="@{/site/index(page=${current} + 1)}" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
@@ -153,10 +173,10 @@
 <script src="../../static/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 <script th:inline="javascript">
     $(document).ready(function () {
-        var current = /*[[${current}]]*/ 0;
+        var current = [[${current}]];
 //        console.log(current);
         var $pageList = $('a');
-        if (current == 0) {
+        if (current < 0 ) {
             $('#previous').attr("disabled", 'disabled');
         }
         $pageList.each(function () {
