--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -85,7 +85,7 @@
             <div class="item active my-carousel-image">
 
                 <!--<img src="../../static/img/hotel/hotel1.JPG" th:src="${hotels[0].picUrl}" alt="Hotel One"/>-->
-                <div class="carousel-cover" style="background-image:url('/img/hotel/bigHotel1.jpg')"></div>
+                <div class="carousel-cover" style="background-image:url('/img/site/big1.jpg')"></div>
 
                 <div class="carousel-caption">
                     <h2>
@@ -96,7 +96,7 @@
             </div>
 
             <div class="item my-carousel-image">
-                <div class="carousel-cover" style="background-image:url('/img/hotel/bigHotel2.jpg')"></div>
+                <div class="carousel-cover" style="background-image:url('/img/site/big2.jpg')"></div>
                 <!--<img src="../../static/img/hotel/hotel2.jpeg" th:src="${hotels[1].picUrl}" alt="Hotel 2"/>-->
                 <div class="carousel-caption">
                     <h2><a href="plans.html" th:href="@{plans(siteID=${sites[1].siteID})}"
@@ -106,7 +106,7 @@
             </div>
 
             <div class="item my-carousel-image">
-                <div class="carousel-cover" style="background-image:url('/img/hotel/bigHotel3.jpg')"></div>
+                <div class="carousel-cover" style="background-image:url('/img/site/big3.jpg')"></div>
                 <!--<img src="../../static/img/hotel/hotel3.jpg" style="background-image:url('../../static/img/hotel/hotel3.jpeg')" th:src="${hotels[2].picUrl}" alt="Hotel 3"/>-->
                 <div class="carousel-caption">
                     <h2><a href="plans.html" th:href="@{plans(siteID=${sites[2].siteID})}"
