--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -19,11 +19,11 @@
 
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <form method="post" role="form" action="register.html"
+        <form method="post" role="form" action="../member/register.html"
               th:action="@{/user/register}">
             <div class="form-group">
                 <label for="mail">e-mail</label>
-                <input type="text" class="form-control" name="mail" id="mail" />
+                <input type="emial" class="form-control" name="mail" id="mail" />
             </div>
             <div class="form-group">
                 <label for="password">password</label>
