--- a/src/main/resources/templates/plan/selectSeat.html
+++ b/src/main/resources/templates/plan/selectSeat.html
@@ -1,10 +1,190 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <title>select seat web</title>
+    <meta charset="UTF-8"/>
+
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1"/>-->
+    <!--  Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" href="../../static/css/bootstrap-theme.min.css" th:href="@{/css/bootstrap-theme.min.css}">
+
+    <link rel="stylesheet" href="../../static/css/hotel.css" th:href="@{/css/hotel.css}"/>
+    <!--<link rel="stylesheet" href="../../static/css/other.css" th:href="@{/css/other.css}"/>-->
+    <link rel="stylesheet" href="../../static/css/jquery.seat-charts.css" th:href="@{/css/jquery.seat-charts.css}"/>
+    <title>Present Site Plans</title>
 </head>
+
+
 <body>
-hhhhhhhhhhhhhhhhhhhhhhhhhhh
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="../member/index.html" th:href="@{index}">Tickets</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html" th:href="@{index}">All Site<span
+                        class="sr-only">(current)</span></a></li>
+                <li><a href="../site/info.html" th:href="@{info}">Site Info</a></li>
+
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Welcome, Gakki <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="../user/index.html" th:href="@{../logout}">Sign out</a></li>
+                        <li><a href="../user/register.html" th:href="@{../register}">Register</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+
+
+
+
+<div>
+    <div id="seat-map">
+        <div class="front">屏幕</div>
+    </div>
+    <div class="booking-details">
+        <p>PlanID：<span th:text="${planID}">0000001</span></p>
+        <!--<p>时间：<span>11月14日 21:00</span></p>-->
+        <p>座位：</p>
+        <ul id="selected-seats"></ul>
+        <p>票数：<span id="counter">0</span></p>
+        <p>总计：<b>￥<span id="total">0</span></b></p>
+
+        <button class="checkout-button">确定购买</button>
+
+        <div id="legend"></div>
+    </div>
+</div>
+
+
+
+
+<script type="text/javascript" src="../../static/js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
+<script type="text/javascript" src="../../static/js/jquery.seat-charts.min.js" th:src="@{/js/jquery.seat-charts.min.js}"></script>
+
+<script th:inline="javascript">
+    var price = 80; //票价
+
+    var planID = '<%=request.getAttribute("planID")%>'  ;
+    alert(planID) ;
+    $.ajax({
+        type: "POST",
+        url: "/plan/getDataOfSelectSeat",
+        data: planID ,
+        dataType: 'json',
+        success: function (data) {
+            if (data.result) {
+                if (isdelete) {
+                    //TODO 暴力返回主页，待修改
+                    window.location.replace("http://localhost:4000/");
+                } else {
+                    location.reload();
+                    if (data.reason) {
+                        $('.mainpage').append('<div class="alert alert-info alert-dismissible" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <strong>Great!</strong> ' +data.reason +  ' </div>');
+                    }
+                }
+            } else {
+                var error_msg = '<p class="errtip">	<strong>Error</strong>：'+data.reason+'</p>'
+                $(".err-msg").html(error_msg);
+            }
+        }
+    })
+
+    $(document).ready(function() {
+        var $cart = $('#selected-seats'), //座位区
+            $counter = $('#counter'), //票数
+            $total = $('#total'); //总计金额
+
+
+
+        var sc = $('#seat-map').seatCharts({
+            map: [  //座位图
+                'aaaaaaaaaa',
+                'aaaaaaaaaa',
+                '__________',
+                'aaaaaaaa__',
+                'aaaaaaaaaa',
+                'aaaaaaaaaa',
+                'aaaaaaaaaa',
+                'aaaaaaaaaa',
+                'aaaaaaaaaa',
+                'aa__aa__aa'
+            ],
+            legend : { //定义图例
+                node : $('#legend'),
+                items : [
+                    [ 'a', 'available',   '可选座' ],
+                    [ 'a', 'unavailable', '已售出']
+                ]
+            },
+            click: function () { //点击事件
+                if (this.status() == 'available') { //可选座
+                    $('<li>'+(this.settings.row+1)+'排'+this.settings.label+'座</li>')
+                        .attr('id', 'cart-item-'+this.settings.id)
+                        .data('seatId', this.settings.id)
+                .appendTo($cart);
+
+                    $counter.text(sc.find('selected').length+1);
+                    $total.text(recalculateTotal(sc)+price);
+
+                    return 'selected';
+                } else if (this.status() == 'selected') { //已选中
+                    //更新数量
+                    $counter.text(sc.find('selected').length-1);
+                    //更新总计
+                    $total.text(recalculateTotal(sc)-price);
+
+                    //删除已预订座位
+                    $('#cart-item-'+this.settings.id).remove();
+                    //可选座
+                    return 'available';
+                } else if (this.status() == 'unavailable') { //已售出
+                    return 'unavailable';
+                } else {
+                    return this.style();
+                }
+            }
+        });
+        //已售出的座位
+        sc.get(['1_2', '4_4','4_5','6_6','6_7','8_5','8_6','8_7','8_8', '10_1', '10_2']).status('unavailable');
+
+    });
+    //计算总金额
+    function recalculateTotal(sc) {
+        var total = 0;
+        sc.find('selected').each(function () {
+            total += price;
+        });
+
+        return total;
+    }
+
+
+
+
+</script>
+
+
+
 </body>
 </html>
