--- a/src/main/resources/templates/plan/selectSeat.html
+++ b/src/main/resources/templates/plan/selectSeat.html
@@ -60,7 +60,7 @@
 
 <div>
     <div id="seat-map">
-        <div class="front">屏幕</div>
+        <div class="front">Main Stage</div>
     </div>
     <div class="booking-details">
         <p>PlanID：<span th:text="${planID}">0000001</span></p>
@@ -73,6 +73,8 @@
         <button class="checkout-button">确定购买</button>
 
         <div id="legend"></div>
+
+
     </div>
 </div>
 
@@ -83,103 +85,173 @@
 <script type="text/javascript" src="../../static/js/jquery.seat-charts.min.js" th:src="@{/js/jquery.seat-charts.min.js}"></script>
 
 <script th:inline="javascript">
-    var price = 80; //票价
 
-    var planID = '<%=request.getAttribute("planID")%>'  ;
-    alert(planID) ;
+    var planID = [[${planID}]];
+
+    // var seatsMap = [];
+    var price_a = 0;
+    var price_b = 0;
+    var price_c = 0;
+    var unlist = [] ;
     $.ajax({
         type: "POST",
         url: "/plan/getDataOfSelectSeat",
-        data: planID ,
+        data: {planID:planID},
         dataType: 'json',
         success: function (data) {
-            if (data.result) {
-                if (isdelete) {
-                    //TODO 暴力返回主页，待修改
-                    window.location.replace("http://localhost:4000/");
-                } else {
-                    location.reload();
-                    if (data.reason) {
-                        $('.mainpage').append('<div class="alert alert-info alert-dismissible" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <strong>Great!</strong> ' +data.reason +  ' </div>');
+            if (data) {
+                // availableList = data.availableList ;
+                // unavailableList = data.unavailableList ;
+                //  totalNum = data.totalNum;
+                // seatsMap = data.seatsMap ;
+                price_a = data.priceArr[0] ;
+                price_b = data.priceArr[1] ;
+                price_c = data.priceArr[2] ;
+                // console.log(seatsMap) ;
+                // console.log(price_a) ;
+                unlist = data.unavailableList ;
+                console.log(unlist) ;
+                var $cart = $('#selected-seats'), //座位区
+                    $counter = $('#counter'), //票数
+                    $total = $('#total'); //总计金额
+
+
+
+                var sc = $('#seat-map').seatCharts({
+
+
+                    naming:{
+
+                        // top:false,
+                        columns: ['1', '2', '3', '4', '5','6', '7', '8', '9','10'],
+
+                        rows:['A0','A1','B0','B1','C0','C1',' ',' ',' ',' '],
+
+                        getId : function (character, row, column) {
+                            if(column<10)
+                                return character+''+row.charAt(1)+''+column;
+                            else
+                                return character+''+(parseInt(row.charAt(1))+1)+'0';
+                        } ,
+
+                        getLabel : function (character, row, column) {
+                            if(column<10)
+                                return character+''+row.charAt(1)+''+column;
+                            else
+                                return character+''+(parseInt(row.charAt(1))+1)+'0';
+                        }
+
+                    },
+
+                    seats: {
+                        A: {
+                            classes: 'A',
+                            price  : price_a
+                            // priceArr[0]
+                        },
+                        B: {
+                            classes: 'B',
+                            price  : price_b
+                            // priceArr[1]
+                        },
+                        C: {
+                            classes: 'C',
+                            price  : price_c
+                            // priceArr[2]
+                        }
+                    },
+
+                    map:
+                    // seatsMap ,
+
+                        [  //座位图
+                            'AAAAAAAAAA',
+                            'AAAAAAAAAA',
+                            'BBBBBBBBBB',
+                            'BBBBBBBBBB',
+                            'CCCCCCCCCC',
+                            'CCCCCCCCCC',
+                            '__________',
+                            '__________',
+                            '__________',
+                            '__________'
+                        ],
+
+
+
+                    legend : { //定义图例
+                        node : $('#legend'),
+                        items : [
+                            // [ 'a', 'available',     '可选座' ],
+                            [ 'A', 'available',     'A座' ],
+                            [ 'B', 'available',     'B座' ],
+                            [ 'C', 'available',     'C座' ],
+                            [ 'X', 'unavailable',   '已售出'],
+                            [ 'A', 'selected',      '已选中']
+                        ]
+                    },
+
+                    click: function () { //点击事件
+                        if (this.status() == 'available') {//可选座
+                            //+(String.fromCharCode(65+this.settings.row/2))+'类'
+
+                            $('<li>' +(this.settings.label)+'座</li>')
+                                .attr('id', 'cart-item-'+this.settings.id)
+                                .data('seatId', this.settings.id)
+                                .appendTo($cart);
+
+                            $counter.text(sc.find('selected').length+1);
+
+                            var tmp_price = this.data().price ;
+
+                            $total.text(recalculateTotal(sc)+tmp_price);
+
+                            return 'selected';
+                        } else if (this.status() == 'selected') { //已选中
+                            //更新数量
+                            $counter.text(sc.find('selected').length-1);
+
+
+                            //更新总计
+                            var tmp_price = this.data().price ;
+
+                            $total.text(recalculateTotal(sc)-tmp_price);
+
+                            //删除已预订座位
+                            $('#cart-item-'+this.settings.id).remove();
+                            //可选座
+                            return 'available';
+                        } else if (this.status() == 'unavailable') { //已售出
+                            return 'unavailable';
+                        } else {
+                            return this.style();
+                        }
                     }
-                }
-            } else {
-                var error_msg = '<p class="errtip">	<strong>Error</strong>：'+data.reason+'</p>'
-                $(".err-msg").html(error_msg);
+                });
+
+
+                //已售出的座位
+                sc.get(unlist).status('unavailable');
+
             }
         }
-    })
+    });
 
     $(document).ready(function() {
-        var $cart = $('#selected-seats'), //座位区
-            $counter = $('#counter'), //票数
-            $total = $('#total'); //总计金额
-
-
-
-        var sc = $('#seat-map').seatCharts({
-            map: [  //座位图
-                'aaaaaaaaaa',
-                'aaaaaaaaaa',
-                '__________',
-                'aaaaaaaa__',
-                'aaaaaaaaaa',
-                'aaaaaaaaaa',
-                'aaaaaaaaaa',
-                'aaaaaaaaaa',
-                'aaaaaaaaaa',
-                'aa__aa__aa'
-            ],
-            legend : { //定义图例
-                node : $('#legend'),
-                items : [
-                    [ 'a', 'available',   '可选座' ],
-                    [ 'a', 'unavailable', '已售出']
-                ]
-            },
-            click: function () { //点击事件
-                if (this.status() == 'available') { //可选座
-                    $('<li>'+(this.settings.row+1)+'排'+this.settings.label+'座</li>')
-                        .attr('id', 'cart-item-'+this.settings.id)
-                        .data('seatId', this.settings.id)
-                .appendTo($cart);
-
-                    $counter.text(sc.find('selected').length+1);
-                    $total.text(recalculateTotal(sc)+price);
-
-                    return 'selected';
-                } else if (this.status() == 'selected') { //已选中
-                    //更新数量
-                    $counter.text(sc.find('selected').length-1);
-                    //更新总计
-                    $total.text(recalculateTotal(sc)-price);
-
-                    //删除已预订座位
-                    $('#cart-item-'+this.settings.id).remove();
-                    //可选座
-                    return 'available';
-                } else if (this.status() == 'unavailable') { //已售出
-                    return 'unavailable';
-                } else {
-                    return this.style();
-                }
-            }
-        });
-        //已售出的座位
-        sc.get(['1_2', '4_4','4_5','6_6','6_7','8_5','8_6','8_7','8_8', '10_1', '10_2']).status('unavailable');
 
     });
+
+
     //计算总金额
     function recalculateTotal(sc) {
         var total = 0;
         sc.find('selected').each(function () {
-            total += price;
+
+            total += this.settings.data.price;
         });
 
         return total;
     }
-
-
 
 
 </script>
