--- a/src/main/resources/templates/plan/unselectSeat.html
+++ b/src/main/resources/templates/plan/unselectSeat.html
@@ -153,7 +153,7 @@
                 dataType: "json",
                 success: function (data) {
                     if (data.result) {
-                        alert(data.result);
+                        alert("预定成功!请在15分钟内前往订单页面完成支付");
                         location.href = "redirect:/"+data.url ;
                     } else {
                         alert(data.result);
